src/main/java/com/example/solid/openClosed/example1/good/AreaService.java
package com.example.solid.openClosed.example1.good;

public class AreaService {
    double calculateArea(Shape shape){
        return shape.getArea();
    }
}
