src/main/java/com/example/solid/openClosed/example1/bad/Circle.java
package com.example.solid.openClosed.example1.bad;

public class Circle {
    private double radius;

    public double getRadius() {
        return radius;
    }

    public void setRadius(double radius) {
        this.radius = radius;
    }
}
